syntax = "proto3";
package productservice;

message ProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetById {
  string id = 1;
}

message Empty {}

message ProductListResponse {
  repeated ProductResponse products = 1;
}

service ProdcutService {
  rpc CreateProduct (ProductRequest) returns (ProductResponse) {};
  rpc GetProduct (GetById) returns (ProductResponse) {};
  rpc GetAllProducts (Empty) returns (ProductListResponse) {};
}